proyecto2.2/pypar.output
Terminals unused in grammar

   ESPTAB
   OPERADOR
   CLASS
   FINALLY
   NONE
   LAMBDA
   TRY
   FROM
   NONLOCAL
   YIELD
   ASSERT
   IMPORT
   EXCEPT
   RAISE
   ENETILDE
   AT
   MENOSMAYOR
   CSIMPLE
   IDIAG
   GATO
   DIDIAG
   SALIDA
   FIN


State 94 conflicts: 1 shift/reduce
State 131 conflicts: 2 shift/reduce


Grammar

    0 $accept: GOAL $end

    1 GOAL: file_input

    2 file_input: file_input NEWLINE
    3           | stmt file_input
    4           | /* empty */

    5 funcdef: DEF IDENTIFICADOR parameters DPUNTO suite

    6 parameters: APAREN parameters_aux CPAREN

    7 parameters_aux: varargslist
    8               | /* empty */

    9 varargslist: varargslist_aux_a varargslist_aux_b
   10            | fpdef val_aux varargslist_aux_c

   11 varargslist_aux_a: varargslist_aux_a fpdef val_aux COMA
   12                  | /* empty */

   13 val_aux: IGUAL test
   14        | /* empty */

   15 varargslist_aux_b: ASTERISCO IDENTIFICADOR n1
   16                  | DASTERISCO IDENTIFICADOR

   17 n1: COMA DASTERISCO IDENTIFICADOR
   18   | /* empty */

   19 varargslist_aux_c: n2 n3

   20 n2: n2 COMA fpdef val_aux
   21   | /* empty */

   22 n3: COMA
   23   | /* empty */

   24 s5: COMA test
   25   | /* empty */

   26 fpdef: IDENTIFICADOR
   27      | APAREN fplist CPAREN

   28 fplist: fpdef fplist_aux fpl_aux

   29 fpl_aux: COMA
   30        | /* empty */

   31 fplist_aux: fplist_aux COMA fpdef
   32           | /* empty */

   33 stmt: simple_stmt
   34     | compound_stmt

   35 simple_stmt: small_stmt simple_stmt_aux ss_aux NEWLINE

   36 ss_aux: PCOMA
   37       | /* empty */

   38 simple_stmt_aux: simple_stmt_aux PCOMA small_stmt
   39                | /* empty */

   40 small_stmt: expr_stmt
   41           | print_stmt
   42           | del_stmt
   43           | pass_stmt
   44           | flow_stmt
   45           | global_stmt
   46           | exec_stmt

   47 expr_stmt: testlist expr_stmt_aux_b

   48 expr_stmt_aux_b: augassign testlist
   49                | expr_stmt_aux_b_a

   50 expr_stmt_aux_b_a: IGUAL testlist
   51                  | /* empty */

   52 augassign: MASIGUAL
   53          | MENOSIGUAL
   54          | ASTIGUAL
   55          | DIAIGUAL
   56          | PORIGUAL
   57          | AMPIGUAL
   58          | PIPEIGUAL
   59          | CIRCIGUAL
   60          | DMENORIGUAL
   61          | DMAYORIGUAL
   62          | DASTIGUAL
   63          | DDIAIGUAL

   64 print_stmt: PRINT s29

   65 s29: s30
   66    | DMAYOR test s31

   67 s30: test s32 comaS
   68    | /* empty */

   69 s31: COMA test comaS
   70    | /* empty */

   71 s32: s32 COMA test
   72    | /* empty */

   73 comaS: COMA
   74      | /* empty */

   75 del_stmt: DEL exprlist

   76 pass_stmt: PASS

   77 flow_stmt: break_stmt
   78          | continue_stmt
   79          | return_stmt

   80 break_stmt: BREAK

   81 continue_stmt: CONTINUE

   82 return_stmt: RETURN return_stmt_aux

   83 return_stmt_aux: testlist
   84                | /* empty */

   85 global_stmt: GLOBAL IDENTIFICADOR global_stmt_aux

   86 global_stmt_aux: global_stmt_aux COMA IDENTIFICADOR
   87                | /* empty */

   88 exec_stmt: EXEC expr s7

   89 s7: IN test s5
   90   | /* empty */

   91 compound_stmt: if_stmt
   92              | while_stmt
   93              | for_stmt
   94              | with_stmt
   95              | funcdef

   96 if_stmt: IF test DPUNTO suite if_stmt_aux s8

   97 if_stmt_aux: if_stmt_aux ELIF test DPUNTO suite
   98            | /* empty */

   99 s8: ELSE DPUNTO suite
  100   | /* empty */

  101 while_stmt: WHILE test DPUNTO suite s8

  102 for_stmt: FOR exprlist IN testlist DPUNTO suite s8

  103 with_stmt: WITH with_item with_stmt_aux DPUNTO suite

  104 with_stmt_aux: with_stmt_aux COMA with_item
  105              | /* empty */

  106 with_item: test s10

  107 s10: AS expr
  108    | /* empty */

  109 suite: simple_stmt
  110      | NEWLINE INDENT suite_aux DEDENT

  111 suite_aux: suite_aux stmt
  112          | stmt

  113 testlist_safe: old_test n10

  114 old_test: or_test

  115 n10: s13 comaS

  116 s13: s13 COMA old_test
  117    | COMA old_test

  118 s15: IF or_test ELSE test
  119    | /* empty */

  120 test: or_test s15

  121 or_test: and_test or_test_aux

  122 or_test_aux: or_test_aux OR and_test
  123            | /* empty */

  124 and_test: not_test and_test_aux

  125 and_test_aux: and_test_aux AND not_test
  126             | /* empty */

  127 not_test: NOT not_test
  128         | comparison

  129 comparison: expr comparison_aux

  130 comparison_aux: comparison_aux comp_op expr
  131               | /* empty */

  132 comp_op: MENOR
  133        | MAYOR
  134        | DIGUAL
  135        | MAIGUAL
  136        | MEIGUAL
  137        | MENORMAYOR
  138        | NIGUAL
  139        | IN
  140        | NOT IN
  141        | IS
  142        | IS NOT

  143 expr: xor_expr expr_aux

  144 expr_aux: expr_aux PIPE xor_expr
  145         | /* empty */

  146 xor_expr: and_expr xor_expr_aux

  147 xor_expr_aux: xor_expr_aux CIRCUNFLEJO and_expr
  148             | /* empty */

  149 and_expr: shift_expr and_expr_aux

  150 and_expr_aux: and_expr_aux AMPERSON shift_expr
  151             | /* empty */

  152 shift_expr: arith_expr shift_expr_aux

  153 shift_expr_aux: shift_expr_aux DMENOR arith_expr
  154               | shift_expr_aux DMAYOR arith_expr
  155               | /* empty */

  156 arith_expr: term arith_expr_aux

  157 arith_expr_aux: arith_expr_aux ae_aux term
  158               | /* empty */

  159 ae_aux: MAS
  160       | MENOS

  161 term: factor term_aux

  162 term_aux: term_aux t_aux factor
  163         | /* empty */

  164 t_aux: ASTERISCO
  165      | DIAG
  166      | PORCEN
  167      | DDIAG

  168 factor: factor_aux factor
  169       | power

  170 factor_aux: MAS
  171           | MENOS

  172 power: atom power_aux s16

  173 s16: DASTERISCO factor
  174    | /* empty */

  175 s17: testlist_comp
  176    | /* empty */

  177 s18: listmaker
  178    | /* empty */

  179 s19: dictorsetmaker
  180    | /* empty */

  181 s20: arglist
  182    | /* empty */

  183 s21: test
  184    | /* empty */

  185 s22: sliceop
  186    | /* empty */

  187 power_aux: power_aux trailer
  188          | /* empty */

  189 atom: APAREN s17 CPAREN
  190     | ACORCHETE s18 CCORCHETE
  191     | ALLAVE s19 CLLAVE
  192     | IDENTIFICADOR
  193     | FLOTANTE
  194     | ENTERO
  195     | string_aux
  196     | TRUE
  197     | FALSE

  198 string_aux: string_aux STRING
  199           | STRING

  200 listmaker: test listmaker_aux

  201 listmaker_aux: list_for
  202              | lm_aux comaS

  203 lm_aux: lm_aux COMA test
  204       | /* empty */

  205 testlist_comp: test testlist_comp_aux

  206 testlist_comp_aux: comp_for
  207                  | tc_aux comaS

  208 tc_aux: tc_aux COMA test
  209       | /* empty */

  210 trailer: APAREN s20 CPAREN
  211        | ACORCHETE subscriptlist CCORCHETE
  212        | PUNTO IDENTIFICADOR

  213 subscriptlist: subscript subscriptlist_aux comaS

  214 subscriptlist_aux: subscriptlist_aux COMA subscript
  215                  | /* empty */

  216 subscript: PUNTO PUNTO PUNTO
  217          | test
  218          | s21 DPUNTO s21 s22

  219 sliceop: DPUNTO s21

  220 exprlist: expr exprlist_aux comaS

  221 exprlist_aux: exprlist_aux COMA expr
  222             | /* empty */

  223 testlist: test testlist_aux comaS

  224 testlist_aux: testlist_aux COMA test
  225             | /* empty */

  226 dictorsetmaker: dictorsetmaker_aux_a
  227               | dictorsetmaker_aux_b

  228 dictorsetmaker_aux_a: test DPUNTO test dsm_aux_a

  229 dsm_aux_a: comp_for
  230          | dsm_aux_a_a comaS

  231 dsm_aux_a_a: dsm_aux_a_a COMA test DPUNTO test
  232            | /* empty */

  233 dictorsetmaker_aux_b: test dsm_aux_b

  234 dsm_aux_b: comp_for
  235          | dsm_aux_b_a comaS

  236 dsm_aux_b_a: dsm_aux_b_a COMA test
  237            | /* empty */

  238 arglist: arglist_aux_a arglist_aux_b

  239 arglist_aux_a: arglist_aux_a argument COMA
  240              | /* empty */

  241 arglist_aux_b: argument comaS
  242              | ASTERISCO test al_aux s25
  243              | DASTERISCO test

  244 al_aux: al_aux COMA argument
  245       | /* empty */

  246 s25: COMA DASTERISCO test
  247    | /* empty */

  248 argument: test s26
  249         | test IGUAL test

  250 s26: comp_for
  251    | /* empty */

  252 list_iter: list_for
  253          | list_if

  254 list_for: FOR exprlist IN testlist_safe s27

  255 list_if: IF old_test s27

  256 s27: list_iter
  257    | /* empty */

  258 comp_iter: comp_for
  259          | comp_if

  260 comp_for: FOR exprlist IN or_test s28

  261 comp_if: IF old_test s28

  262 s28: comp_iter
  263    | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 198 199
ESPTAB (259)
OPERADOR (260)
IDENTIFICADOR (261) 5 15 16 17 26 85 86 192 212
PRINT (262) 64
FALSE (263) 197
CLASS (264)
FINALLY (265)
IS (266) 141 142
RETURN (267) 82
NONE (268)
CONTINUE (269) 81
FOR (270) 102 254 260
LAMBDA (271)
TRY (272)
TRUE (273) 196
DEF (274) 5
FROM (275)
NONLOCAL (276)
WHILE (277) 101
AND (278) 125
DEL (279) 75
GLOBAL (280) 85
NOT (281) 127 140 142
WITH (282) 103
AS (283) 107
ELIF (284) 97
IF (285) 96 118 255 261
OR (286) 122
YIELD (287)
ASSERT (288)
ELSE (289) 99 118
IMPORT (290)
PASS (291) 76
BREAK (292) 80
EXCEPT (293)
IN (294) 89 102 139 140 254 260
RAISE (295)
EXEC (296) 88
NIGUAL (297) 138
DIGUAL (298) 134
MAIGUAL (299) 135
MEIGUAL (300) 136
MAYOR (301) 133
MENOR (302) 132
ENETILDE (303)
CIRCUNFLEJO (304) 147
PIPE (305) 144
AMPERSON (306) 150
DMAYOR (307) 66 154
DMENOR (308) 153
PORCEN (309) 166
DDIAG (310) 167
DIAG (311) 165
DASTERISCO (312) 16 17 173 243 246
ASTERISCO (313) 15 164 242
MENOS (314) 160 171
MAS (315) 159 170
APAREN (316) 6 27 189 210
CPAREN (317) 6 27 189 210
ACORCHETE (318) 190 211
CCORCHETE (319) 190 211
ALLAVE (320) 191
CLLAVE (321) 191
COMA (322) 11 17 20 22 24 29 31 69 71 73 86 104 116 117 203 208 214
    221 224 231 236 239 244 246
DPUNTO (323) 5 96 97 99 101 102 103 218 219 228 231
PUNTO (324) 212 216
PCOMA (325) 36 38
AT (326)
IGUAL (327) 13 50 249
MENOSMAYOR (328)
MASIGUAL (329) 52
MENOSIGUAL (330) 53
ASTIGUAL (331) 54
DIAIGUAL (332) 55
DDIAIGUAL (333) 63
PORIGUAL (334) 56
AMPIGUAL (335) 57
PIPEIGUAL (336) 58
CIRCIGUAL (337) 59
DMAYORIGUAL (338) 61
DMENORIGUAL (339) 60
DASTIGUAL (340) 62
MENORMAYOR (341) 137
CSIMPLE (342)
IDIAG (343)
GATO (344)
DIDIAG (345)
NEWLINE (346) 2 35 110
ENTERO (347) 194
FLOTANTE (348) 193
INDENT (349) 110
SALIDA (350)
DEDENT (351) 110
FIN (352)


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
GOAL (99)
    on left: 1, on right: 0
file_input (100)
    on left: 2 3 4, on right: 1 2 3
funcdef (101)
    on left: 5, on right: 95
parameters (102)
    on left: 6, on right: 5
parameters_aux (103)
    on left: 7 8, on right: 6
varargslist (104)
    on left: 9 10, on right: 7
varargslist_aux_a (105)
    on left: 11 12, on right: 9 11
val_aux (106)
    on left: 13 14, on right: 10 11 20
varargslist_aux_b (107)
    on left: 15 16, on right: 9
n1 (108)
    on left: 17 18, on right: 15
varargslist_aux_c (109)
    on left: 19, on right: 10
n2 (110)
    on left: 20 21, on right: 19 20
n3 (111)
    on left: 22 23, on right: 19
s5 (112)
    on left: 24 25, on right: 89
fpdef (113)
    on left: 26 27, on right: 10 11 20 28 31
fplist (114)
    on left: 28, on right: 27
fpl_aux (115)
    on left: 29 30, on right: 28
fplist_aux (116)
    on left: 31 32, on right: 28 31
stmt (117)
    on left: 33 34, on right: 3 111 112
simple_stmt (118)
    on left: 35, on right: 33 109
ss_aux (119)
    on left: 36 37, on right: 35
simple_stmt_aux (120)
    on left: 38 39, on right: 35 38
small_stmt (121)
    on left: 40 41 42 43 44 45 46, on right: 35 38
expr_stmt (122)
    on left: 47, on right: 40
expr_stmt_aux_b (123)
    on left: 48 49, on right: 47
expr_stmt_aux_b_a (124)
    on left: 50 51, on right: 49
augassign (125)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63, on right: 48
print_stmt (126)
    on left: 64, on right: 41
s29 (127)
    on left: 65 66, on right: 64
s30 (128)
    on left: 67 68, on right: 65
s31 (129)
    on left: 69 70, on right: 66
s32 (130)
    on left: 71 72, on right: 67 71
comaS (131)
    on left: 73 74, on right: 67 69 115 202 207 213 220 223 230 235
    241
del_stmt (132)
    on left: 75, on right: 42
pass_stmt (133)
    on left: 76, on right: 43
flow_stmt (134)
    on left: 77 78 79, on right: 44
break_stmt (135)
    on left: 80, on right: 77
continue_stmt (136)
    on left: 81, on right: 78
return_stmt (137)
    on left: 82, on right: 79
return_stmt_aux (138)
    on left: 83 84, on right: 82
global_stmt (139)
    on left: 85, on right: 45
global_stmt_aux (140)
    on left: 86 87, on right: 85 86
exec_stmt (141)
    on left: 88, on right: 46
s7 (142)
    on left: 89 90, on right: 88
compound_stmt (143)
    on left: 91 92 93 94 95, on right: 34
if_stmt (144)
    on left: 96, on right: 91
if_stmt_aux (145)
    on left: 97 98, on right: 96 97
s8 (146)
    on left: 99 100, on right: 96 101 102
while_stmt (147)
    on left: 101, on right: 92
for_stmt (148)
    on left: 102, on right: 93
with_stmt (149)
    on left: 103, on right: 94
with_stmt_aux (150)
    on left: 104 105, on right: 103 104
with_item (151)
    on left: 106, on right: 103 104
s10 (152)
    on left: 107 108, on right: 106
suite (153)
    on left: 109 110, on right: 5 96 97 99 101 102 103
suite_aux (154)
    on left: 111 112, on right: 110 111
testlist_safe (155)
    on left: 113, on right: 254
old_test (156)
    on left: 114, on right: 113 116 117 255 261
n10 (157)
    on left: 115, on right: 113
s13 (158)
    on left: 116 117, on right: 115 116
s15 (159)
    on left: 118 119, on right: 120
test (160)
    on left: 120, on right: 13 24 66 67 69 71 89 96 97 101 106 118
    183 200 203 205 208 217 223 224 228 231 233 236 242 243 246 248
    249
or_test (161)
    on left: 121, on right: 114 118 120 260
or_test_aux (162)
    on left: 122 123, on right: 121 122
and_test (163)
    on left: 124, on right: 121 122
and_test_aux (164)
    on left: 125 126, on right: 124 125
not_test (165)
    on left: 127 128, on right: 124 125 127
comparison (166)
    on left: 129, on right: 128
comparison_aux (167)
    on left: 130 131, on right: 129 130
comp_op (168)
    on left: 132 133 134 135 136 137 138 139 140 141 142, on right:
    130
expr (169)
    on left: 143, on right: 88 107 129 130 220 221
expr_aux (170)
    on left: 144 145, on right: 143 144
xor_expr (171)
    on left: 146, on right: 143 144
xor_expr_aux (172)
    on left: 147 148, on right: 146 147
and_expr (173)
    on left: 149, on right: 146 147
and_expr_aux (174)
    on left: 150 151, on right: 149 150
shift_expr (175)
    on left: 152, on right: 149 150
shift_expr_aux (176)
    on left: 153 154 155, on right: 152 153 154
arith_expr (177)
    on left: 156, on right: 152 153 154
arith_expr_aux (178)
    on left: 157 158, on right: 156 157
ae_aux (179)
    on left: 159 160, on right: 157
term (180)
    on left: 161, on right: 156 157
term_aux (181)
    on left: 162 163, on right: 161 162
t_aux (182)
    on left: 164 165 166 167, on right: 162
factor (183)
    on left: 168 169, on right: 161 162 168 173
factor_aux (184)
    on left: 170 171, on right: 168
power (185)
    on left: 172, on right: 169
s16 (186)
    on left: 173 174, on right: 172
s17 (187)
    on left: 175 176, on right: 189
s18 (188)
    on left: 177 178, on right: 190
s19 (189)
    on left: 179 180, on right: 191
s20 (190)
    on left: 181 182, on right: 210
s21 (191)
    on left: 183 184, on right: 218 219
s22 (192)
    on left: 185 186, on right: 218
power_aux (193)
    on left: 187 188, on right: 172 187
atom (194)
    on left: 189 190 191 192 193 194 195 196 197, on right: 172
string_aux (195)
    on left: 198 199, on right: 195 198
listmaker (196)
    on left: 200, on right: 177
listmaker_aux (197)
    on left: 201 202, on right: 200
lm_aux (198)
    on left: 203 204, on right: 202 203
testlist_comp (199)
    on left: 205, on right: 175
testlist_comp_aux (200)
    on left: 206 207, on right: 205
tc_aux (201)
    on left: 208 209, on right: 207 208
trailer (202)
    on left: 210 211 212, on right: 187
subscriptlist (203)
    on left: 213, on right: 211
subscriptlist_aux (204)
    on left: 214 215, on right: 213 214
subscript (205)
    on left: 216 217 218, on right: 213 214
sliceop (206)
    on left: 219, on right: 185
exprlist (207)
    on left: 220, on right: 75 102 254 260
exprlist_aux (208)
    on left: 221 222, on right: 220 221
testlist (209)
    on left: 223, on right: 47 48 50 83 102
testlist_aux (210)
    on left: 224 225, on right: 223 224
dictorsetmaker (211)
    on left: 226 227, on right: 179
dictorsetmaker_aux_a (212)
    on left: 228, on right: 226
dsm_aux_a (213)
    on left: 229 230, on right: 228
dsm_aux_a_a (214)
    on left: 231 232, on right: 230 231
dictorsetmaker_aux_b (215)
    on left: 233, on right: 227
dsm_aux_b (216)
    on left: 234 235, on right: 233
dsm_aux_b_a (217)
    on left: 236 237, on right: 235 236
arglist (218)
    on left: 238, on right: 181
arglist_aux_a (219)
    on left: 239 240, on right: 238 239
arglist_aux_b (220)
    on left: 241 242 243, on right: 238
al_aux (221)
    on left: 244 245, on right: 242 244
s25 (222)
    on left: 246 247, on right: 242
argument (223)
    on left: 248 249, on right: 239 241 244
s26 (224)
    on left: 250 251, on right: 248
list_iter (225)
    on left: 252 253, on right: 256
list_for (226)
    on left: 254, on right: 201 252
list_if (227)
    on left: 255, on right: 253
s27 (228)
    on left: 256 257, on right: 254 255
comp_iter (229)
    on left: 258 259, on right: 262
comp_for (230)
    on left: 260, on right: 206 229 234 250 258
comp_if (231)
    on left: 261, on right: 259
s28 (232)
    on left: 262 263, on right: 260 261


state 0

    0 $accept: . GOAL $end

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    PRINT          shift, and go to state 3
    FALSE          shift, and go to state 4
    RETURN         shift, and go to state 5
    CONTINUE       shift, and go to state 6
    FOR            shift, and go to state 7
    TRUE           shift, and go to state 8
    DEF            shift, and go to state 9
    WHILE          shift, and go to state 10
    DEL            shift, and go to state 11
    GLOBAL         shift, and go to state 12
    NOT            shift, and go to state 13
    WITH           shift, and go to state 14
    IF             shift, and go to state 15
    PASS           shift, and go to state 16
    BREAK          shift, and go to state 17
    EXEC           shift, and go to state 18
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    $default  reduce using rule 4 (file_input)

    GOAL           go to state 26
    file_input     go to state 27
    funcdef        go to state 28
    stmt           go to state 29
    simple_stmt    go to state 30
    small_stmt     go to state 31
    expr_stmt      go to state 32
    print_stmt     go to state 33
    del_stmt       go to state 34
    pass_stmt      go to state 35
    flow_stmt      go to state 36
    break_stmt     go to state 37
    continue_stmt  go to state 38
    return_stmt    go to state 39
    global_stmt    go to state 40
    exec_stmt      go to state 41
    compound_stmt  go to state 42
    if_stmt        go to state 43
    while_stmt     go to state 44
    for_stmt       go to state 45
    with_stmt      go to state 46
    test           go to state 47
    or_test        go to state 48
    and_test       go to state 49
    not_test       go to state 50
    comparison     go to state 51
    expr           go to state 52
    xor_expr       go to state 53
    and_expr       go to state 54
    shift_expr     go to state 55
    arith_expr     go to state 56
    term           go to state 57
    factor         go to state 58
    factor_aux     go to state 59
    power          go to state 60
    atom           go to state 61
    string_aux     go to state 62
    testlist       go to state 63


state 1

  199 string_aux: STRING .

    $default  reduce using rule 199 (string_aux)


state 2

  192 atom: IDENTIFICADOR .

    $default  reduce using rule 192 (atom)


state 3

   64 print_stmt: PRINT . s29

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    NOT            shift, and go to state 13
    DMAYOR         shift, and go to state 64
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    $default  reduce using rule 68 (s30)

    s29         go to state 65
    s30         go to state 66
    test        go to state 67
    or_test     go to state 48
    and_test    go to state 49
    not_test    go to state 50
    comparison  go to state 51
    expr        go to state 52
    xor_expr    go to state 53
    and_expr    go to state 54
    shift_expr  go to state 55
    arith_expr  go to state 56
    term        go to state 57
    factor      go to state 58
    factor_aux  go to state 59
    power       go to state 60
    atom        go to state 61
    string_aux  go to state 62


state 4

  197 atom: FALSE .

    $default  reduce using rule 197 (atom)


state 5

   82 return_stmt: RETURN . return_stmt_aux

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    NOT            shift, and go to state 13
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    $default  reduce using rule 84 (return_stmt_aux)

    return_stmt_aux  go to state 68
    test             go to state 47
    or_test          go to state 48
    and_test         go to state 49
    not_test         go to state 50
    comparison       go to state 51
    expr             go to state 52
    xor_expr         go to state 53
    and_expr         go to state 54
    shift_expr       go to state 55
    arith_expr       go to state 56
    term             go to state 57
    factor           go to state 58
    factor_aux       go to state 59
    power            go to state 60
    atom             go to state 61
    string_aux       go to state 62
    testlist         go to state 69


state 6

   81 continue_stmt: CONTINUE .

    $default  reduce using rule 81 (continue_stmt)


state 7

  102 for_stmt: FOR . exprlist IN testlist DPUNTO suite s8

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    expr        go to state 70
    xor_expr    go to state 53
    and_expr    go to state 54
    shift_expr  go to state 55
    arith_expr  go to state 56
    term        go to state 57
    factor      go to state 58
    factor_aux  go to state 59
    power       go to state 60
    atom        go to state 61
    string_aux  go to state 62
    exprlist    go to state 71


state 8

  196 atom: TRUE .

    $default  reduce using rule 196 (atom)


state 9

    5 funcdef: DEF . IDENTIFICADOR parameters DPUNTO suite

    IDENTIFICADOR  shift, and go to state 72


state 10

  101 while_stmt: WHILE . test DPUNTO suite s8

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    NOT            shift, and go to state 13
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    test        go to state 73
    or_test     go to state 48
    and_test    go to state 49
    not_test    go to state 50
    comparison  go to state 51
    expr        go to state 52
    xor_expr    go to state 53
    and_expr    go to state 54
    shift_expr  go to state 55
    arith_expr  go to state 56
    term        go to state 57
    factor      go to state 58
    factor_aux  go to state 59
    power       go to state 60
    atom        go to state 61
    string_aux  go to state 62


state 11

   75 del_stmt: DEL . exprlist

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    expr        go to state 70
    xor_expr    go to state 53
    and_expr    go to state 54
    shift_expr  go to state 55
    arith_expr  go to state 56
    term        go to state 57
    factor      go to state 58
    factor_aux  go to state 59
    power       go to state 60
    atom        go to state 61
    string_aux  go to state 62
    exprlist    go to state 74


state 12

   85 global_stmt: GLOBAL . IDENTIFICADOR global_stmt_aux

    IDENTIFICADOR  shift, and go to state 75


state 13

  127 not_test: NOT . not_test

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    NOT            shift, and go to state 13
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    not_test    go to state 76
    comparison  go to state 51
    expr        go to state 52
    xor_expr    go to state 53
    and_expr    go to state 54
    shift_expr  go to state 55
    arith_expr  go to state 56
    term        go to state 57
    factor      go to state 58
    factor_aux  go to state 59
    power       go to state 60
    atom        go to state 61
    string_aux  go to state 62


state 14

  103 with_stmt: WITH . with_item with_stmt_aux DPUNTO suite

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    NOT            shift, and go to state 13
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    with_item   go to state 77
    test        go to state 78
    or_test     go to state 48
    and_test    go to state 49
    not_test    go to state 50
    comparison  go to state 51
    expr        go to state 52
    xor_expr    go to state 53
    and_expr    go to state 54
    shift_expr  go to state 55
    arith_expr  go to state 56
    term        go to state 57
    factor      go to state 58
    factor_aux  go to state 59
    power       go to state 60
    atom        go to state 61
    string_aux  go to state 62


state 15

   96 if_stmt: IF . test DPUNTO suite if_stmt_aux s8

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    NOT            shift, and go to state 13
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    test        go to state 79
    or_test     go to state 48
    and_test    go to state 49
    not_test    go to state 50
    comparison  go to state 51
    expr        go to state 52
    xor_expr    go to state 53
    and_expr    go to state 54
    shift_expr  go to state 55
    arith_expr  go to state 56
    term        go to state 57
    factor      go to state 58
    factor_aux  go to state 59
    power       go to state 60
    atom        go to state 61
    string_aux  go to state 62


state 16

   76 pass_stmt: PASS .

    $default  reduce using rule 76 (pass_stmt)


state 17

   80 break_stmt: BREAK .

    $default  reduce using rule 80 (break_stmt)


state 18

   88 exec_stmt: EXEC . expr s7

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    expr        go to state 80
    xor_expr    go to state 53
    and_expr    go to state 54
    shift_expr  go to state 55
    arith_expr  go to state 56
    term        go to state 57
    factor      go to state 58
    factor_aux  go to state 59
    power       go to state 60
    atom        go to state 61
    string_aux  go to state 62


state 19

  171 factor_aux: MENOS .

    $default  reduce using rule 171 (factor_aux)


state 20

  170 factor_aux: MAS .

    $default  reduce using rule 170 (factor_aux)


state 21

  189 atom: APAREN . s17 CPAREN

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    NOT            shift, and go to state 13
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    $default  reduce using rule 176 (s17)

    test           go to state 81
    or_test        go to state 48
    and_test       go to state 49
    not_test       go to state 50
    comparison     go to state 51
    expr           go to state 52
    xor_expr       go to state 53
    and_expr       go to state 54
    shift_expr     go to state 55
    arith_expr     go to state 56
    term           go to state 57
    factor         go to state 58
    factor_aux     go to state 59
    power          go to state 60
    s17            go to state 82
    atom           go to state 61
    string_aux     go to state 62
    testlist_comp  go to state 83


state 22

  190 atom: ACORCHETE . s18 CCORCHETE

    STRING         shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    FALSE          shift, and go to state 4
    TRUE           shift, and go to state 8
    NOT            shift, and go to state 13
    MENOS          shift, and go to state 19
    MAS            shift, and go to state 20
    APAREN         shift, and go to state 21
    ACORCHETE      shift, and go to state 22
    ALLAVE         shift, and go to state 23
    ENTERO         shift, and go to state 24
    FLOTANTE       shift, and go to state 25

    $default  reduce using rule 178 (s18)

    test        go to state 84
    or_test     go to state 48
    and_test    go to state 49
    not_test    go to state 50
    comparison  go to state 51
    expr        go to state 52
    xor_expr    go to state 53
    and_expr    go to state 54
    shift_expr  go to state 55
    arith_expr  go to state 56
    term        go to state 57
    factor      go to state 58
    factor_aux  go to state 59
    power       go to state 60
    s18         go to state 85
    atom        go to state 61
    string_aux  go to state 62
    listmaker   go to state 86


state 23

  191 atom: ALLAVE . s19 CLLAVE
